sign in / sign out --ok

--- a/views/home/index.pug
+++ b/views/home/index.pug
@@ -51,4 +51,4 @@ block content
                 style="bottom:10px;right:10px"
               )
                 i.fas.fa-cart-plus
-                div= `(${product.quantity})`
+                span(style="font-size: 13px")= ` (${product.quantity})`
