--- a/views/product/index.pug
+++ b/views/product/index.pug
@@ -10,6 +10,7 @@ block content
   h4="producer name = " + found.producer_name
   form(action="/product/postAddToCart", method="POST")
     input(type="hidden", name="proId",value=product.product_id)
+    input(type="hidden", name="proPrice",value=product.product_price)
     span.ml-3 quantity
     input.ml-2.p-2(name="quantity",type="number", min="1", max="5", required, value = "1")
     br
