--- a/views/bill/index.pug
+++ b/views/bill/index.pug
@@ -11,17 +11,20 @@ block content
       h4= 'Status : ' + bill.status
       .container.col-10
         h3 Details
-        table.table.col-5.text-center
+        table.table.col-8.text-center
           thead
             tr
               th Product Id
+              th Product Name
               th Quantity
               th Product Price
               th Counted
           tbody
             - for(let i = 0; i < bill.details.proId.length; i++)
+              - const proName = products.find(p =>(bill.details.proId[i] == p.product_id)).product_name
               tr
                 td= bill.details.proId[i]
+                td= proName
                 td= bill.details.proQuantity[i]
                 td='$' + bill.details.proPrice[i]
                 td='$' + (bill.details.proPrice[i] * bill.details.proQuantity[i])
@@ -29,10 +32,13 @@ block content
               td
               td
               td
+              td
               td= 'Total : $' + bill.totalPrice
         form(action="/bill/deleteBill", method="POST")
           input(type="hidden", name='billId', value=bill.id)
           input(type="hidden", name='userId', value=user.id)
+          input(type="hidden", name='proId', value=bill.details.proId)
+          input(type="hidden", name='proQuantity', value=bill.details.proQuantity)
           button.btn.btn-danger Cancel
       hr
   - else
