--- a/views/user/signup.pug
+++ b/views/user/signup.pug
@@ -59,4 +59,4 @@ block content
       input(value="client", type="hidden", name="user_permission")
       //- Create
       button.btn.btn-success.mt-3 Sign up
-      a(href='/user/signup').btn.btn-light.mt-3.float-right Login
+      a(href='/user/login').btn.btn-light.mt-3.float-right Login
