--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -21,6 +21,8 @@ html
                 a.nav-link(href='/') About
               li.nav-item
                 a.nav-link.active(target="blank",href='https://www.facebook.com/ninhnguyen375') Contact Us
+              li.nav-item(style='display:none')#adminPage
+                a.nav-link.active(href='/admin/dashboard') Admin Page
           //- Search
           form.form-inline.my-2.my-lg-0.m-auto(action="/search")
               input.form-control.mr-2(
