--- a/views/admin/user.pug
+++ b/views/admin/user.pug
@@ -55,8 +55,7 @@ block content
         placeholder="User Password", 
         name='user_password',
         required,
-        autocomplete="off",
-        pattern='.{6,}').form-control
+        pattern=".{6,}").form-control
       //- select permission
       label(for="add-user_permission").mt-2 Permission
       select.custom-select#add-user_permission(name="user_permission")
