--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -51,7 +51,7 @@ html
             button#dropdownMenuButton.btn.btn-outline-primary.dropdown-toggle(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
               i.fas.fa-shopping-cart
             .dropdown-menu(aria-labelledby='dropdownMenuButton')
-              a(href="/cart").dropdown-item Cart
+              a#goToCart(href="/cart").dropdown-item Cart
               a#goToBill(href="").dropdown-item Bill
           //- end Cart & Bill
           //- a(href="/cart")
