--- a/views/home/category.pug
+++ b/views/home/category.pug
@@ -42,8 +42,8 @@ block content
               h4= producerCurrent.producer_name
               p It is a long established fact that a reader will be distracted.
             a(href='/product/'+products[i].id)
-              span.btn.btn-light.text-danger.ml-2.mt-2= '$' + products[i].product_price
-              span.showQuantity.btn.btn-light.text-capitalize='in stock: ' + products[i].quantity
+              span.btn.btn-light.text-danger.border-danger.mt-1.ml-1= '$' + products[i].product_price
+              span.border.rounded-0.showQuantity.btn.btn-light.text-capitalize='in stock: ' + products[i].quantity
     div.text-center.mt-3
       - for(let i = 1; i <= pages; i++)
         if querys.page == i
