--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -77,7 +77,7 @@ html
               form(action="/search")
                 .search__wrapper
                   input(type="hidden", value="1", name="page")
-                  input.search__field(type='search', name='search', placeholder='Search for...')
+                  input.search__field(type='search', name='search')
                   button.fas.fa-search.search__icon(type='submit')
             a(href="/search").mt-1.ml-2 More
 
