--- a/views/admin/product.pug
+++ b/views/admin/product.pug
@@ -101,7 +101,7 @@ block content
         tr(class=testClass).items
           td= i + 1
           td
-            img(src="/public/img/imgtemp.jpeg", width="110px")
+            img(src= products[i].product_img, width="110px")
           td.item-names= products[i].product_name
           td= producers.find(p => products[i].producer == p.producer_id).producer_name
           td='$'+ products[i].product_price
@@ -124,7 +124,8 @@ block content
               tabindex='-1', 
               role='dialog',
               aria-hidden='true',
-              id='form' + products[i].id).modal.fade
+              id='form' + products[i].id, 
+              enctype='multipart/form-data').modal.fade
                 .modal-dialog(role='document')
                   .modal-content
                     .modal-header
@@ -134,7 +135,11 @@ block content
                     .modal-body
                       input(type="hidden",value=products[i].id, name='id').form-control
                       //- Image
-                      input(type="file", name="product_img", accept="image/*")
+                      label Product Image
+                      input(
+                        type="file", 
+                        name="product_img", 
+                        accept="image/*")
                       //- product_name
                       label(for="edit-product_name") Product Name
                       input#edit-product_name(
