--- a/views/home/index.pug
+++ b/views/home/index.pug
@@ -39,8 +39,8 @@ block content
                 h4= producerCurrent.producer_name
                 p It is a long established fact that a reader will be distracted.
               a(href='/product/'+products[i].id)
-                span.btn.btn-light.text-danger.ml-2.mt-2= '$' + products[i].product_price
-                span.showQuantity.btn.btn-light.text-capitalize='in stock: ' + products[i].quantity
+                span.border.btn.btn-light.text-danger.ml-2.mt-2= '$' + products[i].product_price
+                span.border.rounded-0.showQuantity.btn.btn-light.text-capitalize='in stock: ' + products[i].quantity
       div.text-center.mt-5          
         a(href="/?producer=&page=1").btn.btn-outline-light.text-secondary  More >
   section.cta(style="background-image:url('/public/home/img/bg-cta.jpg');")
