--- a/views/user/signup.pug
+++ b/views/user/signup.pug
@@ -61,18 +61,46 @@
 //-       button.btn.btn-success.mt-3 Sign up
 //-       a(href='/user/login').btn.btn-light.mt-3.float-right Login
 
+    
+      //- $(document).ready( async () => {
+      //-   const datas = await axios.get('/api/user');
+      //-   const pass1 = $('#userpassword');
+      //-   const pass2 = $('#userpassword2');
+      //-   let canSubmit = false;
+      //-   $('#nameInput').on('keyup',function () {
+      //-     let found = datas.data.find(dat => (
+      //-       dat.user_email === $(this).val()
+      //-     ));
+      //-     if(found){
+      //-       $('.text-danger.alertDanger').html('This email has been used!');
+      //-       $(this).focus();
+      //-     } else {
+      //-       $('.text-danger.alertDanger').html('');
+      //-       canSubmit = true;
+      //-     }
+      //-   });
+      //-   $('form').on('submit', () => {
+      //-     if(canSubmit && (pass1.value === pass2.value)){
+      //-       return true;
+      //-     }else{
+      //-       return false;
+      //-     }
+      //-   });
+      //- });
 doctype html
 html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0, shrink-to-fit=no')
     title Sign Up
-    link(rel='stylesheet', href='/public/signup/bootstrap/css/bootstrap.min.css')
+   (rel='stylesheet', href='/public/signup/bootstrap/css/bootstrap.min.css') link(rel='stylesheet', href='/public/signup/bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', href='/public/signup/fonts/fontawesome-all.min.css')
     link(rel='stylesheet', href='/public/signup/fonts/ionicons.min.css')
     link(rel='stylesheet', href='/public/signup/css/Footer-Dark.css')
     link(rel='stylesheet', href='/public/signup/css/Login-Form-Dark.css')
     link(rel='stylesheet', href='/public/signup/css/styles.css')
+    //- progress bar
+    //- link(rel="stylesheet", type="text/css", href="https://cdn.rawgit.com/rikmms/progress-bar-4-axios/0a3acf92/dist/nprogress.css")
   body
     .login-dark(style='height: 100vh;color: rgb(255,255,255);')
       .row
@@ -80,7 +108,6 @@ html
           section.float-left
             a(href='/', style='font-size: 32px;padding: 9px;color: rgb(225,225,225);text-decoration: none;') ShopPi
       form(
-            onsubmit='return checkpass()'
             method='post',
             action='/user/signup', 
             style='max-width: 494px;padding: 40px;padding-top: 14px;padding-bottom: 16px;')
@@ -102,7 +129,7 @@ html
                 pattern='[0-9]{10,}')
         //-   Email
         .form-group
-          input#nameInput.form-control(type='email', placeholder='Email', name='user_email', required)
+          input#emailInput.form-control(type='email', placeholder='Email', name='user_email', required)
         //-   Password
         .form-group
           input.form-control(
@@ -165,29 +192,106 @@ html
     script(src='/public/signup/bootstrap/js/bootstrap.min.js')
     script(src="/public/js/scripts.js")
     script(src="/public/js/axios.min.js")
+    //- progress bar 
+    //- script(src="https://cdn.rawgit.com/rikmms/progress-bar-4-axios/0a3acf92/dist/index.js")
+    //- script(src="https://unpkg.com/axios/dist/axios.min.js")
     script.
-      $(document).ready( async () => {
-        const datas = await axios.get('/api/user');
-        const pass1 = $('#userpassword');
-        const pass2 = $('#userpassword2');
+      //- loadProgressBar();
+      $(() => {
+
+        //- async function testApi () {
+        //-   try {
+        //-     const dpromise = await axios.get('https://kitsu.io/api/edge/anime', {
+        //-       onDownloadProgress: function(progressEvent) {
+        //-         console.log((progressEvent.loaded / 10000) * 100);
+        //-         console.log(progressEvent);
+        //-       }
+        //-     });
+        //-     console.log(dpromise.data);
+        //-   } catch (error) {
+        //-     console.log(error);
+        //-   }
+        //- }
+        //- testApi();
+
+
         let canSubmit = false;
-        $('#nameInput').on('keyup',function () {
-          const found = datas.data.find(dat => (
-            dat.user_email == $(this).val()
-          ));
-          if(found){
-            $('.text-danger.alertDanger').html('This email has been used!');
-            $(this).focus();
-          } else {
-            $('.text-danger.alertDanger').html('');
-            canSubmit = true;
+
+        async function checkCoincidentEmail (val) {
+          try {
+            const datasPromise = await axios.get('/api/user', {
+              onDownloadProgress: function(progressEvent) {
+              }
+            });
+            const { data } = datasPromise;
+            const found = data.find(dat => (dat.user_email === val));
+            if(found){
+              $('.text-danger.alertDanger').html('This Email Has Been Used');
+              canSubmit = false;
+            } else {
+              $('.text-danger.alertDanger').html('');
+              canSubmit = true;
+            }
+          } catch (error) {
+            $('.text-danger.alertDanger').html(`Can not connect to server
+            Please check your network.`);
           }
+        }
+        //- call on load 
+        checkCoincidentEmail($('#emailInput').val());
+        //- check on keyup
+        $('#emailInput').on('keyup change click ', function () {
+          checkCoincidentEmail($(this).val());
         });
-        $('form').on('submit', () => {
-          if(canSubmit && (pass1.value == pass2.value)){
+        //- check on autocomplete
+        $('html').bind('input', function() {
+          checkCoincidentEmail($('#emailInput').val());
+        });
+        //- finaly, check on submit
+        $('form').on('submit',() => {
+          if(canSubmit && ($('#userpassword').val() === $('#userpassword2').val())){
             return true;
-          }else{
+          } else {
             return false;
           }
         });
       });
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
