--- a/views/user/signup.pug
+++ b/views/user/signup.pug
@@ -93,7 +93,7 @@ html
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0, shrink-to-fit=no')
     title Sign Up
-   (rel='stylesheet', href='/public/signup/bootstrap/css/bootstrap.min.css') link(rel='stylesheet', href='/public/signup/bootstrap/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/public/signup/bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', href='/public/signup/fonts/fontawesome-all.min.css')
     link(rel='stylesheet', href='/public/signup/fonts/ionicons.min.css')
     link(rel='stylesheet', href='/public/signup/css/Footer-Dark.css')
